# kyber-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: ed25519.rs
src/: group.rs  lib.rs  random.rs
src/cipher/: cipher.rs  mod.rs
src/dh/: dh.rs  dh_impl.rs  dh_test.rs  mod.rs
src/encoding/: encoding.rs  encodings.rs  mod.rs
src/encrypt/: mod.rs
src/encrypt/ecies/: dh.rs  ecies.rs  ecies_impl.rs  ecies_test.rs  mod.rs
src/examples/: dkg_rabin_test.rs  dkg_test.rs  enc_test.rs  mod.rs
src/group/: group.rs  mod.rs
src/group/edwards25519/: constants.rs  curve.rs  curve_benches.rs  curve_test.rs  fe.rs  ge.rs  ge_mult_vartime.rs  mod.rs  point.rs  point_test.rs  scalar.rs  scalar_benches.rs  scalar_test.rs  scalar_test_types.rs  suite.rs  test_scalars.rs
src/group/integer_field/: integer.rs  integer_field.rs  integer_field_test.rs  integer_test.rs  mod.rs
src/group/internal/: mod.rs
src/share/: mod.rs  poly.rs  poly_test.rs
src/share/dkg/: error.rs  mod.rs
src/share/vss/: dh.rs  dh_test.rs  error.rs  mod.rs  suite.rs
src/sign/: error.rs  mod.rs
src/sign/dss/: dss.rs  dss_sig.rs  dss_test.rs  mod.rs
src/sign/eddsa/: eddsa.rs  eddsa_sig.rs  eddsa_test.rs  mod.rs
src/sign/schnorr/: mod.rs  schnorr.rs  schnorr_test.rs
src/util/: mod.rs
src/util/key/: key.rs  key_pair.rs  key_test.rs  mod.rs
src/util/random/: mod.rs  random.rs  random_stream.rs  random_test.rs
src/util/test/: group.rs  group_test.rs  (+2 more)
src/xof/: mod.rs  traits.rs  xof.rs  xof_test.rs
tests/: integration_tests.rs
tests/group/: mod.rs
tests/sign/: eddsa.rs  mod.rs
(+27 files in other folders)
