[package]
name = "kyber-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519 = "1.5.2"
ed25519-dalek = "1.0.1"
rust-crypto = "0.2.36"
cipher = "0.4.3"
subtle = "2.4.1"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2"
anyhow = "1.0.65"
thiserror = "1.0"
hex = "0.4.3"
lazy_static = "1.4.0"