[package]
name = "kyber-rs"
version = "0.1.0-alpha.5"
edition = "2021"
description = "A toolbox of advanced cryptographic primitives for Rust"
license = "MPL-2.0"
repository = "https://github.com/teleconsys/kyber-rs"

[profile.dev]
overflow-checks = false

[dependencies]
subtle = "2.4.1"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
num-bigint-dig = { version = "0.8" }
num-traits = "0.2"
anyhow = "1.0.65"
thiserror = "1.0"
hex = "0.4.3"
lazy_static = "1.4.0"
criterion = "0.4.0"
digest = { version = "0.10.5", features = ["std"] }
crypto = { version = "0.4.0", features = ["digest", "cipher", "signature"] }
blake3 = "1.3.1"
rand = { version = "0.8.5", features = ["std"] }
sha2 = "0.10.6"
byteorder = "1.4.3"
impl_ops = "0.1.1"
aes-gcm = "0.10.1"
hkdf = "0.12.3"
flate2 = "1.0.24"
scanner-rust = "2.0.16"
either = "1.8.0"

[[bench]]
name = "ed25519"
harness = false
